@@ -11,8 +11,6 @@ ExtensionClass = 2.11.1
 Persistence = 2.11.1
 tempstorage = 2.11.1
 zLOG = 2.11.1
-ZODB3 = 3.8.1
-# ZODB3 = 3.9.0a10 - this causes some errors for the removed versions support
 zc.lockfile = 1.0
 transaction = 1.0a1
 zope.broken = 3.5.0
